--- a/decision.html
+++ b/decision.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
+    <script src="data.js"></script>
     <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
@@ -117,73 +118,6 @@
     let autonomie = 15;
     let ecologie = 65;
 
-    // --- DONNÉES DE JEU (Adaptées avec style) ---
-    const scenarios = {
-        1: {
-            title: "DECISION_REQ_01: RENTRÉE NUMÉRIQUE",
-            desc: "> [SYSTEM] Le parc informatique est vieillissant. Une mise à niveau est requise pour la rentrée. Deux protocoles s'offrent à l'administration.",
-            options: [
-                {
-                    type: "goliath", // Style Rouge/Danger
-                    title: "Option A: Achat Neuf",
-                    desc: "// ERROR: Achat de 30 tablettes propriétaires neuves. Solution clé en main mais coûteuse et fermée.",
-                    icon: "warning",
-                    stats_display: [
-                        { label: "Budget", val: "- 20 000 €", icon: "arrow_downward", color: "text-danger" },
-                        { label: "Autonomie", val: "- 10 %", icon: "arrow_downward", color: "text-danger" },
-                        { label: "Écologie", val: "- 15 pts", icon: "delete", color: "text-danger" }
-                    ],
-                    effect: () => { budget -= 20; autonomie -= 10; ecologie -= 15; },
-                    percent: 62
-                },
-                {
-                    type: "nird", // Style Vert/Success
-                    title: "Option B: Reconditionnement",
-                    desc: "// SUCCESS: Réinstallation de Linux sur les anciens PC. Coût nul, haute maintenabilité, nécessite du temps.",
-                    icon: "recycling",
-                    stats_display: [
-                        { label: "Budget", val: "0 €", icon: "horizontal_rule", color: "text-success" },
-                        { label: "Autonomie", val: "+ 20 %", icon: "arrow_upward", color: "text-success" },
-                        { label: "Écologie", val: "+ 25 pts", icon: "eco", color: "text-success" }
-                    ],
-                    effect: () => { autonomie += 20; ecologie += 25; },
-                    percent: 38
-                }
-            ]
-        },
-        2: {
-            title: "DECISION_REQ_02: COMPÉTENCE PERSONNEL",
-            desc: "> [SYSTEM] Le nouveau système d'exploitation libre déstabilise certains enseignants. Le taux de tickets support est en hausse de 300%.",
-            options: [
-                {
-                    type: "goliath",
-                    title: "Option A: Formation Obligatoire",
-                    desc: "// ALERT: Investissement lourd dans une formation certifiante externe. Efficace mais coûteux.",
-                    icon: "school",
-                    stats_display: [
-                        { label: "Budget", val: "- 5 000 €", icon: "arrow_downward", color: "text-danger" },
-                        { label: "Autonomie", val: "+ 10 %", icon: "arrow_upward", color: "text-success" },
-                        { label: "Moral", val: "Neutre", icon: "sentiment_neutral", color: "text-text-dark" }
-                    ],
-                    effect: () => { autonomie += 10; budget -= 5; },
-                    percent: 51
-                },
-                {
-                    type: "nird",
-                    title: "Option B: Entraide (Peer-to-Peer)",
-                    desc: "// INFO: Créer des ateliers où les élèves et profs experts forment les autres. Gratuit mais lent.",
-                    icon: "groups",
-                    stats_display: [
-                        { label: "Budget", val: "0 €", icon: "horizontal_rule", color: "text-success" },
-                        { label: "Autonomie", val: "+ 3 %", icon: "arrow_upward", color: "text-success" },
-                        { label: "Communauté", val: "++ Link", icon: "favorite", color: "text-warning" }
-                    ],
-                    effect: () => { autonomie += 3; },
-                    percent: 49
-                }
-            ]
-        }
-    };
 
     // --- MOTEUR DE JEU ---
 
